--- a/SCSS Tasks/assets/scss/base/_mixins.scss
+++ b/SCSS Tasks/assets/scss/base/_mixins.scss
@@ -1,1 +1,12 @@
 // All the SCSS mixins goes here
+
+
+
+@mixin media ($size) {
+   
+    @media (max-width: 992px) {
+          @content
+    }
+}
+
+
