--- a/SCSS Tasks/assets/scss/base/_variables.scss
+++ b/SCSS Tasks/assets/scss/base/_variables.scss
@@ -1,20 +1,31 @@
 // All the SCSS Variables goes here
 
-// Header 
-$header-height: 0 0 90px;
-$header-padding: 0 30px;
-
-// Sidebar 
-$sidebar-width: 0 0 100px;
-
-// Font
-$font-family: 'Josefin', sans-serif;
-$heading: 2rem;
-
-// Content 
-
-
-// Card 
+// Smoothness
+$transition: 0.4s all;
 
 // Icons
-$icon-size: 1.75rem;
+$icon-size: 1.25rem;
+
+// Font
+$font-family: 'Poppins', sans-serif;
+$font-capital: 600;
+
+// Header 
+$header-height: 0 0 60px;
+$header-logo-width: 80px;
+$header-padding: 0 30px;
+
+// Search 
+$search-height: 35px;
+$search-width: 400px;
+$search-icon-size: 1rem;
+
+// Profile 
+$profile-width: 150px;
+
+// Sidebar 
+$sidebar-width: 80px;
+
+// Card
+$card-height: 280px;
+$card-padding: 20px;
