--- a/SCSS Tasks/assets/scss/layout/_sidebar.scss
+++ b/SCSS Tasks/assets/scss/layout/_sidebar.scss
@@ -1,4 +1,22 @@
 .sidebar{
-    flex: $sidebar-width;
-    border: 1px solid blue;
+    width: $sidebar-width;
+    background-color: white;
+    
+    .menu{
+        
+        .items{
+            margin: 40px 0;
+        }
+        & .links{
+            padding: 10px;
+            font-size: $icon-size;
+            text-decoration: none;
+        }
+
+        & span{
+            color: $icon-color;
+        }
+    }
 }
+
+
