--- a/SCSS Tasks/assets/scss/utilities/_text.scss
+++ b/SCSS Tasks/assets/scss/utilities/_text.scss
@@ -1,5 +1,5 @@
 // Typographical styles goes here
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Playfair+Display&family=Poppins&family=Roboto&display=swap');
 
 .text-decoration{
     text-decoration: none;
@@ -7,4 +7,8 @@
 
 .text-align-center{
     text-align: center;
+}
+
+h1{
+    color: $text-header-color
 }
