feat: mock up complete

--- a/SCSS Tasks/Dashboard/assets/scss/base/_colors.scss
+++ b/SCSS Tasks/Dashboard/assets/scss/base/_colors.scss
@@ -25,4 +25,11 @@ $card-map:(
     "product" : #f4f9f4,
     "user" : #edf4ff,
     "sell" : #f3f9f9,
+);
+
+$card-clr:(
+    "view" : #438ffe,
+    "product" : #8bc38a,
+    "user" : #438ffe,
+    "sell" : #83bcbd,
 )
