--- a/SCSS Tasks/Dashboard/assets/scss/component/_graph.scss
+++ b/SCSS Tasks/Dashboard/assets/scss/component/_graph.scss
@@ -2,6 +2,10 @@
     padding: 20px;
     width: 35%;
 
+    @include breaks(tablet){
+        width: 100%;
+    }
+
     .chart{
         background-color: $white;
         height: 400px;
