--- a/SCSS Tasks/Dashboard/assets/scss/component/_cards.scss
+++ b/SCSS Tasks/Dashboard/assets/scss/component/_cards.scss
@@ -6,12 +6,25 @@
     .card-box{
         width: 25%;
         padding: 15px;
+
+        @include breaks(laptop){
+            width: 50%;
+        }
+
+        @include breaks(mobile){
+            width: 100%;
+        }
     }
     
     .card{
         height: $card-height;
         padding: $card-padding;
         background-color: $white;
+
+        @include breaks(mobile)
+        {
+            height: 220px;
+        }
 
         &-header{
             display: flex;
@@ -24,6 +37,12 @@
             color: $primany-color;
             font-size: 1.75rem;
             padding: 15px;
+
+            @include breaks(mobile)
+            {
+                font-size: 1.5rem;
+                padding: 10px;
+            }
         }
 
         &-graph{
@@ -35,13 +54,29 @@
             border-bottom: 1px solid $border-card;
             padding: 20px 0 50px;
 
+            @include breaks(mobile)
+            {
+                padding: 20px 0 40px;
+            }
+
             p{
                 color: $text-para;
+
+                @include breaks(mobile)
+                {
+                    font-size: 0.8rem;
+                }
             }
 
             h2{
                 font-size: 2rem;
                 color: $text-header-color;
+
+                @include breaks(mobile)
+                {
+                    font-size: 1.5rem;
+                }
+
             }
         }
 
@@ -65,6 +100,30 @@
             background-color: $clr-val;
         }
     }
-    
 }
 
+
+@each $clr,$clr-val in $card-clr {
+    .card-#{$clr}{
+        .card-logo{
+            color: $clr-val;
+        }
+    }
+}
+
+@each $clr,$clr-val in $card-clr{
+    .card-box{
+        .card-#{$clr}:hover{
+            background-color: $clr-val;
+            
+            p,h2{
+                color: white;
+            }
+
+            .card-logo{
+                background-color: $clr-val;
+                color: white;
+            }
+        }
+    }
+}
