--- a/SCSS Tasks/Dashboard/assets/scss/component/_product-table.scss
+++ b/SCSS Tasks/Dashboard/assets/scss/component/_product-table.scss
@@ -5,16 +5,17 @@
         width: 65%;
         padding: 15px;
 
+        @include breaks(tablet){
+            width: 100%;
+        }
         .product{
             background-color: $white;
             height: auto;
+            overflow-x: auto;
+            overflow-y: auto;
             padding: 0 20px;
             &-table{
-                border-collapse: collapse;
-                // margin: 0 20px;
-                // border: 1px solid red;
-
-               
+                border-collapse: collapse;   
             }
         }
 
@@ -27,6 +28,7 @@
 
         td{
             font-size: 0.9rem;
+            padding: 0 10px;
             background-color: #f5f7f9;
             border-bottom: 20px solid $white;
         }
