--- a/SCSS Tasks/Dashboard/assets/scss/layout/_header.scss
+++ b/SCSS Tasks/Dashboard/assets/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 .main-head{
     flex: $header-height;
     border-bottom: 1px solid $border-color;
+
     .head-left{
         width: $header-logo-width;  
         
@@ -11,30 +12,73 @@
     
     .head-right{
         padding: $header-padding;
+        position: relative;
         
-        .search-box{
-            height: $search-height;
-            width: $search-width;
-            padding-left: 10px;
-            background-color: $body-bg;
 
-            span{
-                color: $icon-color
-            }
-
-            input{
-                background-color: transparent;
-                padding: 0 40px;
-                margin-left: -10px;
-            }
-        }
-
-        .profile{  
-            width: $profile-width;
+        label{
+            display: none;
 
             span{
                 font-size: 1.25rem;
                 color: $icon-color;
+            }
+            @include breaks(tablet)
+            {
+                display: block;
+            }
+        }
+
+        #dropdown{
+            display: none;
+        }
+        
+        .search-box{
+            height: $search-height;
+            width: 30%;
+            max-width: 100px;
+            padding-left: 10px;
+            background-color: $body-bg;
+
+            @include breaks(iphone){
+                display: none;
+            }
+
+            span{
+                color: $icon-color;
+            }
+            
+            input{
+                background-color: transparent;
+                padding: 0 40px;
+                outline: none;
+                margin-left: -10px;
+            }
+        }
+
+       
+
+        .profile{  
+            width: $profile-width;
+
+            @include breaks(tablet)
+            {
+                display: none;
+            }
+
+            span{
+                font-size: 1.25rem;
+                color: $icon-color;
+                position: relative;
+
+                .notification{
+                    position: absolute;
+                    background-color: #fe764b;
+                    height: 7px;
+                    width: 7px;
+                    right: -3px;
+                    top: 0;
+                    border-radius: 50%;
+                }
             }
 
             img{
@@ -45,3 +89,39 @@
         }
     }
 }
+
+// Dropdown 
+#dropdown:checked{
+
+    & ~ .model{
+        top: 48px;
+    }
+}
+
+.model{
+    position: absolute;
+    background-color: #edf4ff;
+    height: 170px;
+    width: 100px;
+    text-align: center;
+    padding: 20px 0;
+    top: -550px;
+    transition: 0.4s all;
+    right: 20px;
+    z-index: 999;
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+
+    span{
+        font-size: 1.25rem;
+        color: $icon-color;
+    }
+
+    img{
+        width: 30px;
+        margin-top: 5px;
+        border-radius: 50%;
+    }
+}
+
