--- a/BootstrapTasks/Dashboard Mockup/assets/scss/base/_colors.scss
+++ b/BootstrapTasks/Dashboard Mockup/assets/scss/base/_colors.scss
@@ -2,3 +2,9 @@
 // Main 
 $primary : #000;
 $secondary: #fff;
+
+// Border 
+$sidebar-border-color: #d7d7d7;
+
+// search 
+$input-focus-border-color: #fff;
