--- a/BootstrapTasks/Dashboard Mockup/assets/scss/base/_variables.scss
+++ b/BootstrapTasks/Dashboard Mockup/assets/scss/base/_variables.scss
@@ -5,3 +5,17 @@ $font-family : 'Poppins' , sans-serif;
 
 // Sidebar 
 $sidebar-width: 350px;
+$sidebar-profile-size: 60px;
+
+// Nav 
+$nav-link-padding-y:                .5rem;
+$nav-link-padding-x:                2.75rem;
+$nav-tabs-link-hover-border-color:  $primary;
+
+// notification 
+$notification-size: 10px;
+
+// search 
+$input-border-radius: 10px; 
+$input-group-addon-bg: transparent;
+$input-focus-box-shadow: none;
