--- a/BootstrapTasks/Dashboard Mockup/assets/scss/base/_variables.scss
+++ b/BootstrapTasks/Dashboard Mockup/assets/scss/base/_variables.scss
@@ -1,5 +1,11 @@
 // All the SCSS Variables goes here
 
+// transition 
+$transition: 0.4s all;
+
+// white-space
+$nowrap: nowrap;
+
 // Font 
 $font-family : 'Poppins' , sans-serif;
 
@@ -9,8 +15,9 @@ $sidebar-profile-size: 60px;
 
 // Nav 
 $nav-link-padding-y:                .5rem;
-$nav-link-padding-x:                2.75rem;
+$nav-link-padding-x:                3.75rem;
 $nav-tabs-link-hover-border-color:  $primary;
+$nav-link-transition:               $transition;
 
 // notification 
 $notification-size: 10px;
@@ -18,4 +25,9 @@ $notification-size: 10px;
 // search 
 $input-border-radius: 10px; 
 $input-group-addon-bg: transparent;
-$input-focus-box-shadow: none;
+$input-focus-box-shadow: 0;
+
+// card
+$card-spacer-x:   2.25rem;
+$card-spacer-y:   2.25rem;
+$card-border-radius: 30px;
