--- a/BootstrapTasks/Dashboard Mockup/assets/scss/component/_sales.scss
+++ b/BootstrapTasks/Dashboard Mockup/assets/scss/component/_sales.scss
@@ -1,3 +1,6 @@
 .sales{
-    width: 420px;
+    min-width: 350px;
+    background-color: black;
+    border-radius: 30px;
+    margin-left: 60px;
 }
