feat: desktop view complete

--- a/BootstrapTasks/Dashboard Mockup/assets/scss/base/_colors.scss
+++ b/BootstrapTasks/Dashboard Mockup/assets/scss/base/_colors.scss
@@ -8,3 +8,10 @@ $sidebar-border-color: #d7d7d7;
 
 // search 
 $input-focus-border-color: #fff;
+
+$card: (
+    "sales" : #ffeee2,
+    "profit" : #eefcef,
+    "order" : #e6f5fa,
+    "views" : #f4f5f9,
+)
