--- a/SCSS Tasks/SCSS Starter Pack/scss/style.scss
+++ b/SCSS Tasks/SCSS Starter Pack/scss/style.scss
@@ -1,12 +1,12 @@
 // Project base and component style import
-@import 'base/_index.scss';
+@import '~/src/assets/scss/base/index';
 
 // Project Specific Components
-@import 'component/_index.scss';
+@import '~/src/assets/scss/component/index';
 
 // Now other style import
-@import 'layout/_index.scss';
+@import '~/src/assets/scss/layout/index';
 
-@import 'utilities/_index.scss';
+@import '~/src/assets/scss/utilities/index';
 
-@import 'vendors/_index.scss';
+@import '~/src/assets/scss/vendors/index';
